Fixed the problem of text misalignment in category.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
 .base_link {
     color: #fff;
     padding: 15px 35px;
-    border-radius: 10px;
+    border-radius: 15px;
     text-decoration: none;
     font-size: 20px;
     letter-spacing: 1px;
@@ -65,7 +65,7 @@ header {
 
 /* start category */
 .category {
-    padding: 80px;
+    padding: 60px 0;
 }
 .category_box {
     width: 85%;
@@ -78,12 +78,14 @@ header {
 .category_item {
     width: 24%;
     padding: 50px 0;
-    border-radius: 10px;
+    cursor: pointer;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     border: 1px solid transparent;
+    border-radius: 20px;
+    transition: 0.2s;
 }
 .category_item:hover {
     border-color: #ffb91a;
@@ -92,10 +94,12 @@ header {
     width: 100px;
 }
 .category_item h3 {
-    margin-top: 18px;
     letter-spacing: 1px;
     font-size: 20px;
     font-weight: 500;
+}
+.category_item_img{
+    height: 110px;
 }
 
 /* end category */
